addes discription to secrets route

--- a/app/views/pages/secrets.html.erb
+++ b/app/views/pages/secrets.html.erb
@@ -1,6 +1,10 @@
 <h1>This is a file that accesses secrets.yml</h1>
 <%= Rails.application.secrets[:value_in_secrets] %>
 <ul>
-  <li>We should be able to manage secrets.yml and database.yml separately for each region</li>
-  <li>All app servers in a region will share the same secrets.yml and database.yml files</li>
+  <li><h3>We should be able to manage secrets.yml and database.yml separately for each region</h3></li>
+  <li>Each region will be running a seprate kubernetes cluster with an unique tagalys-secrets.yml file</li>
+  <li><h3>All app servers in a region will share the same secrets.yml and database.yml files</h3></li>
+  <li>The secret variables are stored inside /mnt/secrets folder in which each variable is stored in a seperate file*</li>
+  <li>These variables are auto updated (at /mnt/secret/) without any downtime</li>
+  <li>*Currently the secrets are refered from env variables which requires a server restart for updating</li>
 </ul>
